--- a/pages/7958.html
+++ b/pages/7958.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -401,14 +401,14 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_efcd727bd004e3d5924aa2b681a76a23a362f14f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>dim</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>dim = 1</annotation></semantics></math>: <a class='existingWikiWord' href='/nlab/show/Riemann+surface'>Riemann surface</a>, <a class='existingWikiWord' href='/nlab/show/super+Riemann+surface'>super Riemann surface</a></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_39d45c48338f8ea09f2bb87dd76bd7c0b845c929_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>dim</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>dim = 1</annotation></semantics></math>: <a class='existingWikiWord' href='/nlab/show/Riemann+surface'>Riemann surface</a>, <a class='existingWikiWord' href='/nlab/show/super+Riemann+surface'>super Riemann surface</a></p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Calabi-Yau+variety'>Calabi-Yau manifold</a></p>
 
 <ul>
-<li><math class='maruku-mathml' display='inline' id='mathml_efcd727bd004e3d5924aa2b681a76a23a362f14f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>dim</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>dim = 2</annotation></semantics></math>: <a class='existingWikiWord' href='/nlab/show/K3+surface'>K3 surface</a></li>
+<li><math class='maruku-mathml' display='inline' id='mathml_39d45c48338f8ea09f2bb87dd76bd7c0b845c929_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>dim</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>dim = 2</annotation></semantics></math>: <a class='existingWikiWord' href='/nlab/show/K3+surface'>K3 surface</a></li>
 </ul>
 </li>
 
@@ -424,15 +424,15 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#statement'>Statement</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>Cauchy’s integral theorem states that <a class='existingWikiWord' href='/nlab/show/line+integral'>contour integrals</a> of <a class='existingWikiWord' href='/nlab/show/holomorphic+function'>holomorphic functions</a>, in any <a class='existingWikiWord' href='/nlab/show/simply+connected+space'>simply connected</a> <a class='existingWikiWord' href='/nlab/show/subspace'>subspace</a> of the <a class='existingWikiWord' href='/nlab/show/complex+number'>complex plane</a>, are invariant under <a class='existingWikiWord' href='/nlab/show/homotopy'>homotopy</a> of paths.</p>
+<p>Cauchy’s integral theorem states that <a class='existingWikiWord' href='/nlab/show/line+integral'>contour integrals</a> of <a class='existingWikiWord' href='/nlab/show/holomorphic+function'>holomorphic functions</a>, in any <a class='existingWikiWord' href='/nlab/show/simply+connected+space'>simply connected</a> open subset of the <a class='existingWikiWord' href='/nlab/show/complex+number'>complex plane</a>, are invariant under <a class='existingWikiWord' href='/nlab/show/homotopy'>homotopy</a> of paths.</p>
 
 <h2 id='statement'>Statement</h2>
 
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_efcd727bd004e3d5924aa2b681a76a23a362f14f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>γ</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>γ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\gamma_1,\gamma_2</annotation></semantics></math> be two homotopic <a class='existingWikiWord' href='/nlab/show/loop'>loops</a> in a <a class='existingWikiWord' href='/nlab/show/simply+connected+space'>simply connected</a> open subset <math class='maruku-mathml' display='inline' id='mathml_efcd727bd004e3d5924aa2b681a76a23a362f14f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>⊆</mo><mi>ℂ</mi></mrow><annotation encoding='application/x-tex'>D\subseteq \mathbb{C}</annotation></semantics></math>. Let <math class='maruku-mathml' display='inline' id='mathml_efcd727bd004e3d5924aa2b681a76a23a362f14f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> be a holomorphism on <math class='maruku-mathml' display='inline' id='mathml_efcd727bd004e3d5924aa2b681a76a23a362f14f_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math>. Then we have</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_efcd727bd004e3d5924aa2b681a76a23a362f14f_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>∫</mo> <mrow><msub><mi>γ</mi> <mn>1</mn></msub></mrow></msub><mi>f</mi><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mi mathvariant='normal'>d</mi><mi>z</mi><mo>=</mo><msub><mo>∫</mo> <mrow><msub><mi>γ</mi> <mn>2</mn></msub></mrow></msub><mi>f</mi><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mi mathvariant='normal'>d</mi><mi>z</mi></mrow><annotation encoding='application/x-tex'> \int_{\gamma_1} f(z) \,\mathrm{d}z = \int_{\gamma_2} f(z) \,\mathrm{d}z </annotation></semantics></math></div>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_39d45c48338f8ea09f2bb87dd76bd7c0b845c929_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>γ</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>γ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\gamma_1,\gamma_2</annotation></semantics></math> be two homotopic <a class='existingWikiWord' href='/nlab/show/loop'>loops</a> in a <a class='existingWikiWord' href='/nlab/show/simply+connected+space'>simply connected</a> open subset <math class='maruku-mathml' display='inline' id='mathml_39d45c48338f8ea09f2bb87dd76bd7c0b845c929_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>⊆</mo><mi>ℂ</mi></mrow><annotation encoding='application/x-tex'>D\subseteq \mathbb{C}</annotation></semantics></math>. Let <math class='maruku-mathml' display='inline' id='mathml_39d45c48338f8ea09f2bb87dd76bd7c0b845c929_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> be a holomorphism on <math class='maruku-mathml' display='inline' id='mathml_39d45c48338f8ea09f2bb87dd76bd7c0b845c929_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math>. Then we have</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_39d45c48338f8ea09f2bb87dd76bd7c0b845c929_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>∫</mo> <mrow><msub><mi>γ</mi> <mn>1</mn></msub></mrow></msub><mi>f</mi><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mi mathvariant='normal'>d</mi><mi>z</mi><mo>=</mo><msub><mo>∫</mo> <mrow><msub><mi>γ</mi> <mn>2</mn></msub></mrow></msub><mi>f</mi><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mi mathvariant='normal'>d</mi><mi>z</mi></mrow><annotation encoding='application/x-tex'> \int_{\gamma_1} f(z) \,\mathrm{d}z = \int_{\gamma_2} f(z) \,\mathrm{d}z </annotation></semantics></math></div>
 <p>In particular we have</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_efcd727bd004e3d5924aa2b681a76a23a362f14f_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>∫</mo> <mrow><msub><mi>γ</mi> <mn>1</mn></msub></mrow></msub><mi>f</mi><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mi mathvariant='normal'>d</mi><mi>z</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'> \int_{\gamma_1} f(z) \,\mathrm{d}z = 0 </annotation></semantics></math></div>
-<p>for <math class='maruku-mathml' display='inline' id='mathml_efcd727bd004e3d5924aa2b681a76a23a362f14f_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>γ</mi> <mn>2</mn></msub><mo>≔</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>\gamma_2 \coloneqq 0</annotation></semantics></math>.</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_39d45c48338f8ea09f2bb87dd76bd7c0b845c929_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>∫</mo> <mrow><msub><mi>γ</mi> <mn>1</mn></msub></mrow></msub><mi>f</mi><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mi mathvariant='normal'>d</mi><mi>z</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'> \int_{\gamma_1} f(z) \,\mathrm{d}z = 0 </annotation></semantics></math></div>
+<p>for <math class='maruku-mathml' display='inline' id='mathml_39d45c48338f8ea09f2bb87dd76bd7c0b845c929_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>γ</mi> <mn>2</mn></msub><mo>≔</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>\gamma_2 \coloneqq 0</annotation></semantics></math>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -457,19 +457,18 @@ margin-left: 0em;
  
  
  
- 
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on April 10, 2014 01:04:27 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (145.116.131.80)
+  Revised on October 24, 2017 15:12:07 
+  by <span class="newWikiWord">dmitri<a href="/nlab/new/dmitri">?</a></span>
+  (2001:770:10:300:7917:d5e6:47b4:8e03)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Cauchy+integral+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Cauchy+integral+theorem/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Cauchy+integral+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Cauchy+integral+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Cauchy+integral+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Cauchy+integral+theorem/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Cauchy+integral+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Cauchy+integral+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
