--- a/pages/15804.html
+++ b/pages/15804.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,21 +308,27 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>
-</p>
+    <p><a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a></p>
 
-<p><a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a></p>
+<h2 id='references'>References</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Radovan+Dermisek'>Radovan Dermisek</a> <em>qft I-8</em> (<a href='http://www.physics.indiana.edu/~dermisek/QFT_09/qft-I-8-4p.pdf'>pdf</a>, <a class='existingWikiWord' href='/nlab/files/DermisekSpinorField.pdf' title='pdf'>pdf</a>)</li>
+</ul>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Created on September 16, 2014 10:09:17 
+  Revised on October 25, 2017 06:49:25 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (185.26.182.33)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/spinor+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/spinor+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/spinor+field/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/spinor+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/spinor+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
