--- a/pages/18702.html
+++ b/pages/18702.html
@@ -352,7 +352,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Bertrand+Eynard'>Bertrand Eynard</a>, <a class='existingWikiWord' href='/nlab/show/Nicolas+Orantin'>Nicolas Orantin</a>, <em>Topological recursion in rand om matrices and enumerative geometry</em>, J. Phys. A: Mathematical and Theoretical , 42(29), 2009 (<a href='https://arxiv.org/abs/0811.3531'>arXiv:0811.3531</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Bertrand+Eynard'>Bertrand Eynard</a>, <a class='existingWikiWord' href='/nlab/show/Nicolas+Orantin'>Nicolas Orantin</a>, <em>Topological recursion in random matrices and enumerative geometry</em>, J. Phys. A: Mathematical and Theoretical , 42(29), 2009 (<a href='https://arxiv.org/abs/0811.3531'>arXiv:0811.3531</a>)</p>
 </li>
 
 <li>
@@ -360,7 +360,13 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>During the Institut Henri Poincaré’s thematic trimester “<a href='http://combi17.math.cnrs.fr'>Combinatorics and interactions</a>”, Nicolas Orantin delivered a series of lectures on topological recursion, which are available online:</p>
+<p>A textbook developing various topics related to topological recursion (in particular, discussing the links to enumeration of <a class='existingWikiWord' href='/nlab/show/topological+map'>maps</a>) is</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Bertrand+Eynard'>Bertrand Eynard</a>, <em>Counting Surfaces</em>, CRM Aisenstadt Chair lectures, Progress in Mathematical Physics 70, Birkhäuser, 2016</li>
+</ul>
+
+<p>A series of lectures on topological recursion were delivered by Nicolas Orantin during the Institut Henri Poincaré’s thematic trimester “<a href='http://combi17.math.cnrs.fr'>Combinatorics and interactions</a>”, and are available online:</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Nicolas+Orantin'>Nicolas Orantin</a>, <em>Topological Recursion</em>, eight-part lecture series, 2017. <a href='https://m.youtube.com/watch?v=qvBfeVLPZpE'>youtube</a> (1/8)</li>
@@ -403,14 +409,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 22, 2017 11:02:09 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.50.90)
+  Revised on October 25, 2017 10:04:53 
+  by <a class="existingWikiWord" href="/nlab/show/Noam+Zeilberger">Noam Zeilberger</a>
+  (147.188.194.204)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/topological+recursion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/topological+recursion/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/topological+recursion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/topological+recursion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/topological+recursion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/topological+recursion/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/topological+recursion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/topological+recursion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
