--- a/pages/17148.html
+++ b/pages/17148.html
@@ -308,7 +308,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>I’m currently a first-year master’s student at McMaster University. I’m interested in <a class='existingWikiWord' href='/nlab/show/model+theory'>model theory</a>, especially from the perspective of <a class='existingWikiWord' href='/nlab/show/logic'>categorical logic</a>.</p>
+    <p>I’m currently a second-year master’s student at McMaster University. I’m interested in <a class='existingWikiWord' href='/nlab/show/model+theory'>model theory</a>, especially from the perspective of <a class='existingWikiWord' href='/nlab/show/logic'>categorical logic</a>.</p>
 
 <p>Here is my <a href='http://ms.mcmaster.ca/~hanj18'>homepage</a>.</p>
 
@@ -316,14 +316,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March  9, 2017 13:39:45 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (185.25.95.132)
+  Revised on October 25, 2017 11:21:37 
+  by <a class="existingWikiWord" href="/nlab/show/jesse">jesse</a>
+  (108.170.146.13)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/jesse" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/jesse/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/jesse" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/jesse" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/jesse" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/jesse/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/jesse" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/jesse" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
