--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,27 +308,40 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <ul>
-<li>
-<p>an <a class='existingWikiWord' href='/nlab/show/family'>indexed set</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_73b05972458b662c94628f514c32237e92e65d10_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><munderover><mo>↪</mo><mi>et</mi><mrow><mphantom><mi>AA</mi></mphantom><msub><mi>f</mi> <mi>i</mi></msub><mphantom><mi>AA</mi></mphantom></mrow></munderover><msup><mi>ℝ</mi> <mi>n</mi></msup><msub><mo stretchy='false'>}</mo> <mrow><mi>i</mi><mo>∈</mo><mi>I</mi></mrow></msub></mrow><annotation encoding='application/x-tex'>
-   \{ \mathbb{R}^n \underoverset{et}{\phantom{AA}f_i\phantom{AA}}{\hookrightarrow} \mathbb{R}^n\}_{i \in I}
+    <blockquote>
+<p><code>{:data</code></p>
+</blockquote>
 
-</annotation></semantics></math></div>
-<p>of <a class='existingWikiWord' href='/nlab/show/embedding'>open embeddings</a> (def. \ref{LocalDiffeomorphismBetweenCartesianSpaces})</p>
-</li>
-</ul>
+<p>Hmm. I can’t find mention that Instiki actually parses that. Maybe <code>:data</code> is unknown and shows up in the error log.</p>
+
+<p>testing <code>{:data</code></p>
+
+<p></p>
+
+<p>after <code>:data</code> statement.</p>
+
+<p>testing <code>{:piffle</code> with internal <code>\}</code></p>
+
+<p></p>
+
+<p>after <code>:piffle</code> statement.</p>
+
+<p>testing <code>{:piffle</code> with unescaped internal <code>}</code></p>
+
+<p> baz }</p>
+
+<p>after <code>:piffle</code> statement.</p>
 </div>
 
 <div class="revisedby">
-  Revised on October 25, 2017 15:20:01 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  Revised on October 25, 2017 16:17:53 
+  by <a class="existingWikiWord" href="/nlab/show/Rod+McGuire">Rod Mc Guire</a>
+  (108.39.130.142)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1177" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1177 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1178" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1178 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
